# NovaDB

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HOSTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  setup.sh  website.html
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
contrib/: novacli.c
include/novadb/: error.h  nvdb.h  nvdb_config.h  types.h
src/: engine.c  main.c
src/common/: logging.c  logging.h  memory.c  memory.h
src/network/: protocol.c  protocol.h  server.c  server.h
src/sql/: executor.c  executor.h  lexer.c  lexer.h  parser.c  parser.h  planner.c  planner.h
src/storage/: btree.c  btree.h  buffer.c  buffer.h  page.c  page.h  wal.c  wal.h
src/txn/: mvcc.c  mvcc.h  transaction.c  transaction.h
test/: test_btree.c  test_integration.c  test_main.c  test_sql.c  test_wal.c
